# trading-bot

./: README.md  agent.py  autonomous_agent.py  backend.py  backtester.py  config.py  env.template  indicators.py  main.py  markets.py  models.py  portfolio.py  positions.py  prompt.py  pyproject.toml  requirements.txt  stock_data.py  trading.py
frontend/: index.html
